--- a/SportBook/app/src/main/res/values/strings.xml
+++ b/SportBook/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="reset_password_text">Reset Password</string>
     <string name="error_password_mismatch_text">Password mistmatch!</string>
     <string name="error_signup_failure_text">Sign up failure.</string>
+    <string name="error_update_timerank_failure_text">Update failure.</string>
     <string name="icon_back">&#xf104;</string>
     <string name="icon_notification">&#xf0a2;</string>
     <string name="sign_up_text">Sign Up</string>
